--- a/A propos.html
+++ b/A propos.html
@@ -82,6 +82,10 @@ C’est simple et rapide à utiliser.
                                <br>
             *BNB, Salana(SOL), Ripple(XRP) et d'autres cryptos populaires.<br>
         </p>
+        <div>
+            <h3>C'est quoi un wallet ou portefeuille numériques</h3>
+            <p>Un wallet ou portefeuielle </p>
+        </div>
     </div>
 
         </section>
