--- a/A propos.html
+++ b/A propos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À propos - Horus Crypto & Finance</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <header>
@@ -71,21 +71,17 @@ C’est simple et rapide à utiliser.
     </div>
 
     <div class="blue">
-        <h3>Exemple des quelques cryptomonnaie</h3>
+        < des quelques cryptomonnaie</h3>
         <p>
-            * Bitcoin (BTC): appellé autrement la crypto Mére est une crypto crééé en 2009 
+            * Bitcoin (BTC): appellé autrement la crypto Mére est une crypto créé en 2009 
                              par un invidu ou groupes<br> d'invidus  au nom de "SATOSHI NAKAMOTO"
                             est un pseudonyme, <br>l'indentité du créateur du Bitcoin reste un mystére(?);<br>
                             <br>
             * Ethereum (ETH): trés utilisée pour les contrats intelligents(Smart contrat)
-                               <br>1ETH = 1$;
+                               
                                <br>
             *BNB, Salana(SOL), Ripple(XRP) et d'autres cryptos populaires.<br>
         </p>
-        <div>
-            <h3>C'est quoi un wallet ou portefeuille numériques</h3>
-            <p>Un wallet ou portefeuielle </p>
-        </div>
     </div>
 
         </section>
