--- a/A propos.html
+++ b/A propos.html
@@ -9,6 +9,15 @@
 <body>
     <header>
      
+        <h1>Horus Crypto & Finance</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="A propos.html">À propos</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    
     <section class="michel">
     <div class="blue">   
         <h1>C'est quoi la cryptomonnaie</h1>
