--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 <body>
     <header>
         <h1>Horus Crypto & Finance</h1>
-        <nav>
+        <nav class="navbar">
+            <div class="nav-links">
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="A propos.html">À propos</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
+            </div>
+           
         </nav>
+       
     </header>
 
     <section class="hero">
